Flexiblere Gestaltung der Titelseite fuer lange Titel und/oder lange Namen-Untertitel-Kombinationen (also fuer zweizeiligen Kram).

--- a/tuberlinbeamer.cls
+++ b/tuberlinbeamer.cls
@@ -51,11 +51,14 @@
 		\put(93,74){\includegraphics[width=30mm]{\pathtologo}}
 		\put(-0.5,32){\ifnum\thedeko>0\color{TUred}\rule{\rand}{32mm}\fi}
 		\put(5,32){\ifnum\thedeko>0\includegraphics[height=32mm,width=118mm]{\FileName}\fi}
-		\put(5,20){\parbox[b]{112mm}{\usebeamerfont{title}\usebeamercolor[fg]{titlelike}{\fontsize{12}{14}\selectfont\inserttitle}}}
-		\put(5,13){\color{grau}\fontsize{8pt}{8pt}\selectfont\insertauthor%
+		\put(5,8){\parbox[b][23mm][s]{112mm}{%
+		\vfill
+		\usebeamerfont{title}\usebeamercolor[fg]{titlelike}{\fontsize{12}{14}\selectfont\inserttitle}
+		\vfill
+		\color{grau}\fontsize{8pt}{8pt}\selectfont\insertauthor%
 			\ifdefempty{\insertinstitute}{}{~|~\insertinstitute}%
-			\ifdefempty{\insertsubtitle}{}{~|~\insertsubtitle}}
-		%\put(5,7){\color{grau}\rule{118mm}{0.5pt}}
+			\ifdefempty{\insertsubtitle}{}{~|~\insertsubtitle}%
+		\vfill}}
 		\put(5,9){\ifx\pathtomylogo\leer{}\else{\color{grau}{\rule{118mm}{0.5pt}}}\fi}
 		\put(5,7.5){\ifx\pathtomylogo\leer{\color{grau}{\rule{118mm}{0.5pt}}}\fi}
 		\put(123,2){\ifx\pathtomylogo\leer\else{\makebox[0mm][r]{\includegraphics[height=6mm]{\pathtomylogo}}}\fi}
