Korrekturen am Fusszeilenlayout

--- a/tuberlinbeamer.cls
+++ b/tuberlinbeamer.cls
@@ -51,13 +51,13 @@
 		\put(93,74){\includegraphics[width=30mm]{\pathtologo}}
 		\put(-0.5,32){\ifnum\thedeko>0\color{TUred}\rule{\rand}{32mm}\fi}
 		\put(5,32){\ifnum\thedeko>0\includegraphics[height=32mm,width=118mm]{\FileName}\fi}
-		\put(5,8){\parbox[b][23mm][s]{112mm}{%
-		\vfill
+		\put(5,8){\parbox[b][23mm][s]{118mm}{%
+		\raggedright\vfill
 		\usebeamerfont{title}\usebeamercolor[fg]{titlelike}{\fontsize{12}{14}\selectfont\inserttitle}
 		\vfill
 		\color{grau}\fontsize{8pt}{8pt}\selectfont\insertauthor%
 			\ifdefempty{\insertinstitute}{}{~|~\insertinstitute}%
-			\ifdefempty{\insertsubtitle}{}{~|~\insertsubtitle}%
+			\ifdefempty{\insertsubtitle}{}{~|~\insertsubtitle}\par%
 		\vfill}}
 		\put(5,9){\ifx\pathtomylogo\leer{}\else{\color{grau}{\rule{118mm}{0.5pt}}}\fi}
 		\put(5,7.5){\ifx\pathtomylogo\leer{\color{grau}{\rule{118mm}{0.5pt}}}\fi}
@@ -83,11 +83,12 @@
 	\begin{picture}(100,10)
 	\put(5,9){\ifx\pathtomylogo\leer{}\else{\rule{118mm}{0.5pt}}\fi}
   \put(5,7.5){\ifx\pathtomylogo\leer{\rule{118mm}{0.5pt}}\fi}
-	\put(5,2){\parbox[b]{95mm}{\fontsize{5pt}{6pt}\selectfont%
+	\put(5,1.5){\parbox[b][5.5mm][s]{95mm}{\fontsize{5pt}{5pt}\selectfont\vfill%
 		\textbf{\inserttitle}~|~\insertauthor%
 		\ifdefempty{\insertsubtitle}{}{~|~\insertsubtitle}\par%
-		\vspace{1pt}Seite \insertframenumber\par}}
-	\put(123,2){\ifx\pathtomylogo\leer\else{\makebox[0mm][r]{\includegraphics[height=6mm]{\pathtomylogo}}}\fi}
+		\vfill\vfill%
+		Seite \insertframenumber\vfill}}
+	\put(123,1.5){\ifx\pathtomylogo\leer\else{\makebox[0mm][r]{\includegraphics[height=6.5mm]{\pathtomylogo}}}\fi}
 	\end{picture}}
 
 \setbeamertemplate{navigation symbols}{}
