--- a/beispiel.tex
+++ b/beispiel.tex
@@ -1,51 +1,44 @@
 \documentclass[Nike]{tuberlinbeamer}
 
-%\usepackage{arev} % Empfehlenswert, wenn Formeln gesetzt werden
+\usepackage[ngerman]{babel}  % 'babel' muss geladen werden
+\usepackage[utf8]{inputenc}  % optional, aber empfehlenswert
 
-
-\title{Das ist ein sehr langer Titel für meinen überaus wichtigen Vortrag}
+% Die ueblichen Angaben
+\title{\LaTeX-Folien im Corporate Design der TU Berlin}
 \subtitle{Untertitel}
-\author{Vorname Nachname}
+\author[Kurzname]{Vorname Nachname}
 \institute{Technische Universität Berlin}
 
-
-%% Nur für dieses Dokument
-\usepackage{listings}
-\lstset{basicstyle=\small\ttfamily,tabsize=2,numbers=left,numberstyle=\tiny\color{gray},rulecolor=\color{gray},frame=single,framerule=0.7pt,frameround=tttt,xleftmargin=5mm,xrightmargin=2mm,language=[LaTeX]TeX}
-\newcommand{\tubcls}{\texttt{tuberlinbeamer}\xspace}
-%%
-
+% Eigenes Logo einfuegen:
+\renewcommand{\pathtomylogo}{meinlogo}
 
 \begin{document}
-
 
 \begin{frame}
 \maketitle
 \end{frame}
 
+
 \begin{frame}
 \tableofcontents
 \end{frame}
 
-
 \section{Einleitung}
 
-\begin{frame}[fragile]{Verwendung der \tubcls-Klasse}
+\begin{frame}[fragile]{Verwendung der \texttt{tuberlinbeamer}-Klasse}
 Es folgen demnächst ein paar Folien zur Verwendung dieser Dokumentklasse.
 \begin{itemize}
 \item Kenntnis der \emph{beamer}-Klasse ist von Vorteil
 \end{itemize}
 \end{frame}
 
-
 \section{Zusammenfassung}
 
 \begin{frame}{ToDo}
-\begin{itemize}[<+->]
+\begin{itemize}
 \item \emph{ToDo} schreiben
 \item \emph{ToDo} abarbeiten
 \end{itemize}
 \end{frame}
-
 
 \end{document}
