--- a/beispiel.tex
+++ b/beispiel.tex
@@ -372,4 +372,13 @@
   \end{itemize}
 
 \end{frame}
+
+\begin{frame}{Future Work \& Discussion}
+  \begin{itemize}
+    \item Additional input features (chromatin accessibility)
+    \item Evaluate model on different datasets
+    \item Support additional species
+  \end{itemize}
+\end{frame}
+
 \end{document}
